--- a/css/flex-global-954ca3.webflow.css
+++ b/css/flex-global-954ca3.webflow.css
@@ -2627,7 +2627,6 @@ figcaption {
   grid-column-gap: 3rem;
   grid-row-gap: 3rem;
   grid-template-rows: auto;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-auto-columns: 1fr;
   display: grid;
 }
@@ -2687,7 +2686,7 @@ figcaption {
 .heading-style-small {
   font-family: var(--heading--small-font-family);
   text-transform: uppercase;
-  font-size: 8vw;
+  font-size: 4vw;
   font-weight: 400;
   line-height: 100%;
 }
@@ -3016,7 +3015,7 @@ figcaption {
   grid-row-gap: 2rem;
   flex-flow: column;
   justify-content: flex-start;
-  align-items: flex-start;
+  align-items: center;
   display: flex;
 }
 
@@ -3319,7 +3318,6 @@ figcaption {
 .nav {
   grid-column-gap: 1.25rem;
   grid-row-gap: 1.25rem;
-  flex-direction: column;
   align-items: flex-start;
   padding-left: 0;
   list-style-type: none;
@@ -4332,14 +4330,15 @@ figcaption {
 .heading-alt-h5 {
   font-family: var(--global--body-font-family);
   text-transform: none;
-  font-size: 1.75vw;
+  font-size: 1.3vw;
   font-weight: 600;
   line-height: 140%;
+  text-decoration: none;
 }
 
 .home-services-list {
-  grid-column-gap: 3rem;
-  grid-row-gap: 1.25rem;
+  grid-column-gap: 8px;
+  grid-row-gap: 8px;
   grid-template-rows: auto auto;
   grid-template-columns: 1fr 1fr;
   grid-auto-columns: 1fr;
@@ -5201,12 +5200,11 @@ figcaption {
   }
 
   .footer {
-    min-height: 100vh;
     padding: 6rem 6rem 3rem;
   }
 
   .heading-style-small {
-    font-size: 8rem;
+    font-size: 4rem;
   }
 
   .button {
@@ -5276,7 +5274,7 @@ figcaption {
   }
 
   .heading-alt-h5 {
-    font-size: 1.75rem;
+    font-size: 1.3rem;
   }
 
   .section-top {
@@ -5708,7 +5706,6 @@ figcaption {
   .footer-nav {
     grid-column-gap: 4rem;
     grid-row-gap: 4rem;
-    grid-template-columns: 1fr 1fr;
   }
 
   .licensing-inner {
@@ -6012,7 +6009,7 @@ figcaption {
   }
 
   .home-services-list {
-    grid-row-gap: 1rem;
+    grid-row-gap: 8px;
   }
 
   .section-top {
@@ -6548,7 +6545,7 @@ figcaption {
   }
 
   .heading-style-small {
-    font-size: 16vw;
+    font-size: 12vw;
   }
 
   .navbar-menu {
@@ -6566,7 +6563,6 @@ figcaption {
 
   .footer-column {
     justify-content: flex-start;
-    align-items: flex-start;
   }
 
   .footer-small {
@@ -6723,8 +6719,8 @@ figcaption {
   }
 
   .home-services-list {
-    grid-column-gap: 2rem;
-    grid-row-gap: 1rem;
+    grid-column-gap: 8px;
+    grid-row-gap: 8px;
   }
 
   .section-top {
@@ -7083,7 +7079,7 @@ figcaption {
     padding: 3rem 2rem 6rem;
   }
 
-  .footer-nav, .styleguide-2-col {
+  .styleguide-2-col {
     grid-template-columns: 1fr;
   }
 
@@ -7263,8 +7259,8 @@ figcaption {
   }
 
   .home-services-list {
-    grid-column-gap: .5rem;
-    grid-row-gap: .5rem;
+    grid-column-gap: 8px;
+    grid-row-gap: 8px;
     flex-flow: column;
     display: flex;
   }
