--- a/css/flex-global-954ca3.webflow.css
+++ b/css/flex-global-954ca3.webflow.css
@@ -286,7 +286,7 @@
   --navbar-item--letter-spacing: 0px;
   --navbar-item-default--text-color-hover: var(--navbar-item-default--text-color);
   --button-text--border-width: var(--global--border-width);
-  --button-text-default--border-color: #BC9B5F;
+  --button-text-default--border-color: #00BBC9;
   --button-text-inverse--border-color: var(--button-text-inverse--text-color);
   --global-colors--background-muted-2: #eee;
   --navbar-item--border-width: var(--global--border-width);
@@ -1850,7 +1850,7 @@ figcaption {
 
 .max-width-large {
   width: 100%;
-  max-width: 50rem;
+  /*max-width: 50rem;*/
 }
 
 .text-color-muted {
@@ -4074,8 +4074,6 @@ figcaption {
   grid-row-gap: 0rem;
   flex-flow: column;
   grid-template-rows: auto;
-  grid-template-columns: .8fr 1fr;
-  grid-auto-columns: 1fr;
   place-items: start stretch;
   display: grid;
 }
@@ -4210,8 +4208,7 @@ figcaption {
 
 .home-hero-right-top {
   flex-flow: column;
-  justify-content: space-between;
-  padding: 10vw 6vw 4vw;
+  padding: 0 6vw 4vw;
   display: flex;
 }
 
@@ -4245,10 +4242,9 @@ figcaption {
   grid-column-gap: 5rem;
   grid-row-gap: 3rem;
   grid-template-rows: auto auto;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-auto-columns: 1fr;
   align-content: center;
-  max-width: 800px;
   display: grid;
 }
 
@@ -4314,7 +4310,7 @@ figcaption {
 
 .home-services-item-content {
   flex-flow: column;
-  justify-content: space-between;
+  justify-content: center;
   height: 100vh;
   padding: 6vw;
   display: flex;
@@ -4587,20 +4583,20 @@ figcaption {
   border-radius: 500px;
   justify-content: flex-start;
   align-items: center;
-  width: 70px;
-  height: 40px;
-  padding: 10px;
+  width: 66px;
+  height: 36px;
+  padding:6px 10px;
   display: flex;
   position: fixed;
-  bottom: 2rem;
+  bottom: 1rem;
   left: 2rem;
 }
 
 .toggle-color-dot {
   background-color: var(--global-colors--background-default);
   border-radius: 50%;
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
 }
 
 .dark-mode {
@@ -4733,7 +4729,6 @@ figcaption {
   grid-auto-columns: 1fr;
   justify-content: space-between;
   align-items: center;
-  padding: 2rem 6vw 1.5rem 4vw;
   display: grid;
 }
 
@@ -5242,7 +5237,7 @@ figcaption {
   }
 
   .home-hero-right-top {
-    padding: 8rem 6rem 4rem;
+    padding: 0 6rem 4rem;
   }
 
   .heading-alt-h2 {
@@ -5956,7 +5951,7 @@ figcaption {
 
   .home-hero-right-top {
     height: auto;
-    padding: 3rem 4rem 0;
+    padding: 0 4rem 0;
   }
 
   .heading-alt-h2 {
@@ -7222,7 +7217,7 @@ figcaption {
   }
 
   .home-hero-right-top {
-    padding-top: 2.5rem;
+    padding-top: 0;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
   }
