--- a/src/components/header-component/header-component.html
+++ b/src/components/header-component/header-component.html
@@ -1,50 +1,109 @@
-<header class="navbar sticky-top flex-md-nowrap p-0 bg-white border-bottom">
-    <div class="col-8 col-md-3 col-lg-2 me-0 px-3 fs-6 border-end border-sm-0 ">
-      <div class="row d-flex align-items-center py-2">
-        <div class="col-3 col-md-4">
-          <img src.bind="logo" alt="Logo" class="img-fluid rounded-circle border" /></div>
-        <div class="col-9 col-md-8 aling-items-center">
-          <div class="fw-bold">User</div>
-          <div class="fs-6">
-            <!--FALTA ELIPISIS PARA EVITAR DESBORDAMIENTO-->
-            <small>Role and Mail</small>
-          </div>
-        </div>
+<nav class="navbar navbar-expand-lg mb-0 sticky-top p-0 border-bottom border-black" aria-label="Offcanvas navbar large">
+  <div class="container">
+    <a class="col-6 col-md-3 ps-0" load="home">
+      <img src.bind="logo" alt="Logo Asegurate"
+        class="img-fluid">
+    </a>
+    <button class="navbar-toggler border-0 pe-0 fw-bold" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar2"
+      aria-controls="offcanvasNavbar2" aria-label="Toggle navigation">
+      <i class="hgi hgi-stroke hgi-menu-11 fs-4"></i>
+    </button>
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar2"
+      aria-labelledby="offcanvasNavbar2Label">
+      <div class="offcanvas-header justify-content-between">
+
+        <a class="col-8" load="home">
+          <img src.bind="logo" alt="Logo Asegurate"
+            class="img-fluid">
+        </a>
+
+        <button type="button" class="nav-link" data-bs-dismiss="offcanvas"
+          aria-label="Close">
+          <i class="hgi hgi-stroke hgi-circle-arrow-right-02 fs-1 text-secondary"></i>
+        </button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 gap-4 gap-md-0">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle fw-medium " href="#" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Planes de Salud
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Obamacare</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Planes Individuales y Grupo Familiar</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">MEDICARE y MEDICAID</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle fw-medium " href="#" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Nuestros Servicios
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Asesoria Personalizada</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Asistente Virtual</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle fw-medium " href="#" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Enlaces
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Ver mi Tarjeta de Identificacion (ID)</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Reclamaciones y Sugerencias</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle fw-medium " href="#" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Sobre Nosotros
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Propósito, Misión y Visión</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Equipo</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Agentes</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle fw-medium " href="#" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">
+              Recursos
+            </a>
+            <ul class="dropdown-menu dropdown-menu-md-end">
+              <li><a class="dropdown-item" href="#">Que es un Seguro de Salud</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li>
+                <hr class="dropdown-divider">
+              </li>
+              <li><a class="dropdown-item" href="#">Tipos de Planes de Salud</a></li>
+            </ul>
+          </li>
+        </ul>
+
       </div>
     </div>
-  
-    <div class="d-none d-md-flex col-md-9 col-lg-10 justify-content-end px-3 gap-2">
-      <button class="btn border bg-transparent rounded-circle" type="button">
-        <i class="hgi hgi-stroke hgi-moon-02 fs-5"></i>
-      </button>
-      <button class="btn border bg-transparent rounded-circle" type="button">
-        <i class="hgi hgi-stroke hgi-notification-03 fs-5"></i>
-      </button>
-      <button class="btn btn-primary d-flex align-items-center gap-2" type="button">
-        <i class="hgi hgi-stroke hgi-whatsapp fs-5"></i>
-        WhatsApp
-      </button>
-    </div>
-
-    <ul class="col-4 navbar-nav flex-row d-md-none justify-content-end">
-      <!--
-      BUSCADOR PARA LUEGO
-      
-      <li class="nav-item text-nowrap">
-        <button class="nav-link px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSearch"
-          aria-controls="navbarSearch" aria-expanded="false" aria-label="Toggle search">
-          <i class="hgi hgi-stroke hgi-search-01 fs-4"></i>
-        </button>
-      </li>-->
-      <li class="nav-item text-nowrap">
-        <button class="nav-link px-3" type="button" data-bs-toggle="offcanvas" data-bs-target="#sidebarMenu"
-          aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
-          <i class="hgi hgi-stroke hgi-menu-11 fs-4"></i>
-        </button>
-      </li>
-    </ul>
-  
-    <div id="navbarSearch" class="navbar-search w-100 collapse">
-      <input class="form-control w-100 rounded-0 border-0" type="text" placeholder="Search" aria-label="Search">
-    </div>
-  </header>
+  </div>
+</nav>
