Home para aprobación

--- a/src/components/galeria-estados/galeria-estados.html
+++ b/src/components/galeria-estados/galeria-estados.html
@@ -98,7 +98,15 @@
 </style>
 <div class="section-divider bg-primary"></div>
 <div class="container">
-  <h1 class="display-3 text-center">Galeria de Estados</h1>
+  <h1 class="display-4 text-center">Nuestra cobertura</h1>
+  <div class="row justify-content-center">
+    <div class="col-md-6">
+      <p class="fs-4 text-center">
+        Si estás en Texas, Florida o Indiana, podemos ayudarte a encontrar el seguro médico ideal con las mejores opciones disponibles bajo la reforma de OBAMACARE.
+      </p>
+    </div>
+  </div>
+
   <div class="slider-container">
     <div id="statesCarousel" class="carousel slide" data-bs-interval="false">
       <div class="carousel-inner">
@@ -327,7 +335,7 @@
           <div class="slider-content">
 
 
-            <h2 class="state-title">California</h2>
+            <h2 class="state-title">Texas</h2>
             <svg class="state-map" width="378" height="372" viewBox="0 0 378 372" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M352.732 120.417L352.793 120.953L342.929 120.897L342.162 120.746L342.13 120.599L341.94 120.305L339.48 118.474L339.351 106.865L345.688 108.687L345.819 109.026L345.827 109.047L346.04 109.533L346.098 109.632L346.281 109.878L346.413 110L347.544 110.722L347.948 110.987L347.983 111.008L349.476 111.822L349.942 111.829L352.626 110.469L352.736 110.394L352.758 110.374L353.006 110.344L354.486 110.129L357.039 110.641L357.437 110.804L357.867 111.158L358.035 119.099L357.972 119.067L357.822 119.018L355.314 118.617L355.125 118.623L354.436 118.778L354.382 118.793L353.51 119.096L353.238 119.323L352.793 120.114L352.732 120.417Z"
@@ -1080,7 +1088,7 @@
           <div class="slider-content">
 
 
-            <h2 class="state-title">Texas</h2>
+            <h2 class="state-title">Indiana</h2>
             <svg class="state-map" width="378" height="372" viewBox="0 0 228 378" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path fill-rule="evenodd" clip-rule="evenodd"
                 d="M43.4853 70.0346L40.4111 39.2721L56.978 30.6696L60.937 69.9792L60.5793 70.4491L59.0322 71.3103L58.7408 71.2283L53.8998 68.1644L53.7958 68.1144L50.3561 66.9245L50.3148 66.9122L49.0364 66.59L48.8147 66.5849L48.103 66.7295L47.9522 66.7867L44.3609 68.8641L44.2015 69.0104L43.4853 70.0346Z"
@@ -1367,7 +1375,6 @@
             </div>
           </div>
         </div>
-
 
       </div>
 
