--- a/src/components/aliados-comerciales/aliados-comerciales.css
+++ b/src/components/aliados-comerciales/aliados-comerciales.css
@@ -25,7 +25,7 @@
 }
 
 .sponsor-item {
-    width: 200px;
+    width: 160px;
     padding: 0 20px;
     flex-shrink: 0;
 }
@@ -49,7 +49,7 @@
     }
 
     100% {
-        transform: translateX(calc(-200px * 6));
+        transform: translateX(calc(-160px * 6));
         /* La mitad del ancho total */
     }
 }
@@ -62,7 +62,7 @@
 /* Responsive */
 @media (max-width: 768px) {
     .sponsor-item {
-        width: 150px;
+        width: 160px;
     }
 
     @keyframes scroll {
@@ -71,7 +71,21 @@
         }
 
         100% {
-            transform: translateX(calc(-150px * 6));
+            transform: translateX(calc(-160px * 6));
         }
     }
+}
+
+/*CUSTOM ISAAC*/
+.logos_masks{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    -webkit-background: linear-gradient(to right, #fff 0%, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0) 80%, #fff 100%) !important;
+    -moz-background: linear-gradient(to right, #fff 0%, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0) 80%, #fff 100%) !important;
+    -o-background: linear-gradient(to right, #fff 0%, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0) 80%, #fff 100%) !important;
+    -ms-background: linear-gradient(to right, #fff 0%, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0) 80%, #fff 100%) !important;
+    background: linear-gradient(to right, #fff 0%, rgba(255, 255, 255, 0) 20%, rgba(255, 255, 255, 0) 80%, #fff 100%) !important;
 }
